--- a/HTML & CSS/Exam Preparation/Wirework/styles.css
+++ b/HTML & CSS/Exam Preparation/Wirework/styles.css
@@ -56,3 +56,11 @@ nav {
     color: white;
     cursor: pointer;
 }
+
+/* banner */
+
+.banner img {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+}
