--- a/HTML & CSS/Exam Preparation/Wirework/styles.css
+++ b/HTML & CSS/Exam Preparation/Wirework/styles.css
@@ -122,3 +122,31 @@ nav {
     border-top: 1px solid #5E5248;
     padding-top: 1em;
 }
+
+/* subbanner */
+
+.subbanner {
+    height: 200px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3em;
+}
+
+.subbanner span h2 {
+    color: #4F4F4F;
+    font-size: 2em;
+    font-weight: 300;
+}
+
+.subbanner span p {
+    color: #5E5248;
+}
+
+.subbanner span a {
+    text-decoration: none;
+    background-color: #1B9772;
+    padding: 1em 2em;
+    color: white;
+}
