solved date counter task

--- a/React/React-Udemy/date-counter/src/App.css
+++ b/React/React-Udemy/date-counter/src/App.css
@@ -1,9 +1,11 @@
 .App {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-.step {
+.step, .count {
   display: flex;
   align-items: center;
 }
